Root/Visit Page/visit-style.css
body {
    background-color: rgba(250, 207, 143, 0.319);
    font-size: 15px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

header {
    background: rgb(110, 5, 5);
}

.h1 {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

nav {
    float: right
}

.container {
    background: rgb(110, 5, 5);
    width: 80%;
    margin: 0 auto;
}

.logo {
    float: left;
}

header::after {
    content: "";
    clear: both;
    display: table;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

nav li {
    display: inline-block;
    margin-left: 50px;
    padding-top: 30px;

    position: relative;
}

nav ul>li>a {
    color: black;
    text-decoration: none;
    text-transform: uppercase;
    font-size: large;
}

nav ul>li>a:hover {
    color: rgb(168, 168, 168);
}

nav ul>li>a::before {
    content: '';
    display: block;
    height: 5px;
    background-color: black;

    position: absolute;
    top: 0;
    width: 0%;

    transition: all ease-in-out 250ms;
}


nav ul>li>a:hover::before {
    width: 100%
}

@media screen and (max-width: 768px) {
    nav li {
        margin-right: 5px !important;
    }
}

@media screen and (max-width: 480px) {
    nav li {
        margin-right: 3px !important;
    }
}

.row {
    clear: both;
}

.column {
    float: left;
}

.left {
    width: 25%;
    background-color: #aaa;
}

.right {
    width: 75%;
}

button {
    margin: 20px;
    display: block;
    width: 80%;
    justify-content: center;

}

.hidden {
    display: none
}

.custom-carousel {
    width: 600px;
    border: 4px double #000;
}



#visit_info_header {
color: red;
font-family: serif;
font-size: 500%;
font-weight: bolder;
text-decoration-line: underline;
padding-left: 200px;
}

#content-container {
    display: flex;
}

#text-container {
    flex: 1;
}

#carousel-container {
    margin-left: auto;
}

